[package]
name = "sshdb"
version = "0.16.15"
edition = "2021"
description = "Keyboard-first SSH library and launcher TUI."
authors = ["Riccardo Iaconelli <riccardo@kde.org>"]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["ssh", "tui", "cli"]
categories = ["command-line-utilities"]
homepage = "https://github.com/ruphy/sshdb"
repository = "https://github.com/ruphy/sshdb"

[dependencies]
anyhow = "1.0"
crossterm = "0.27"
directories = "5"
fuzzy-matcher = "0.3"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.10"
